<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginBottom="10dp"
              android:background="@color/colorAccent"
              android:orientation="horizontal">
    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content">
        <ImageView
            style="@style/home_ksrk_image"
            android:id="@+id/image"
            android:src="@drawable/home_ksrk_icon_sort"
           />
        <TextView
            style="@style/home_ksrk_text"
            android:layout_marginTop="28dp"
            android:layout_below="@+id/image"
            android:text="@string/home_ksrk_icon_sort"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/image1"
            style="@style/home_ksrk_image"
            android:src="@drawable/home_ksrk_icon_video"
            />
        <TextView
            style="@style/home_ksrk_text"
            android:layout_below="@+id/image1"
            android:text="@string/home_ksrk_icon_video"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content">
        <ImageView
            style="@style/home_ksrk_image"
            android:id="@+id/image2"
            android:src="@drawable/home_ksrk_icon_course"/>
        <TextView
            style="@style/home_ksrk_text"
            android:layout_below="@+id/image2"
            android:text="@string/home_ksrk_icon_course"
           />
    </RelativeLayout>
    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/image3"
            style="@style/home_ksrk_image"
            android:src="@drawable/home_ksrk_icon_check_in"/>
        <TextView
            style="@style/home_ksrk_text"
            android:layout_below="@+id/image3"
            android:text="@string/home_ksrk_icon_check_in"
            />
    </RelativeLayout>


</LinearLayout>