<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
                android:id="@+id/me"
                android:background="@color/commen"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:scaleType="fitXY"
            android:layout_height="200dp"
            android:src="@drawable/personal_head_bg"
            />
    <RelativeLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="200dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"
            android:src="@drawable/userinfomessage"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:src="@drawable/head_default"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/login_or"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </RelativeLayout>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_below="@+id/head"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_below="@+id/head"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:background="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:drawableLeft="@drawable/usercenter_myfav"
                android:drawablePadding="6dp"
                android:layout_width="wrap_content"
                android:text="@string/my_shoucang"
                android:layout_height="wrap_content"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/cart_expand"
                android:layout_alignParentRight="true"
                android:layout_margin="15dp"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_marginTop="0.1dp"
            android:background="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:drawableLeft="@drawable/usercenter_myfoot"
                android:drawablePadding="6dp"
                android:layout_width="wrap_content"
                android:text="@string/myfoot"
                android:layout_height="wrap_content"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/cart_expand"
                android:layout_alignParentRight="true"
                android:layout_margin="15dp"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_marginTop="10dp"
            android:background="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:drawableLeft="@drawable/usercenter_cart"
                android:drawablePadding="6dp"
                android:layout_width="wrap_content"
                android:text="@string/cart"
                android:layout_height="wrap_content"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/cart_expand"
                android:layout_alignParentRight="true"
                android:layout_margin="15dp"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_marginTop="0.1dp"
            android:background="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:drawableLeft="@drawable/usercenter_myorder"
                android:drawablePadding="6dp"
                android:layout_width="wrap_content"
                android:text="@string/myorder"
                android:layout_height="wrap_content"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/cart_expand"
                android:layout_alignParentRight="true"
                android:layout_margin="15dp"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_marginTop="0.1dp"
            android:background="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:drawableLeft="@drawable/usercenter_address_manager"
                android:drawablePadding="6dp"
                android:layout_width="wrap_content"
                android:text="@string/address_manager"
                android:layout_height="wrap_content"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/cart_expand"
                android:layout_alignParentRight="true"
                android:layout_margin="15dp"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_marginTop="10dp"
            android:background="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:drawableLeft="@drawable/usercenter_settting"
                android:drawablePadding="6dp"
                android:layout_width="wrap_content"
                android:text="@string/settting"
                android:layout_height="wrap_content"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/cart_expand"
                android:layout_alignParentRight="true"
                android:layout_margin="15dp"
                />
        </RelativeLayout>
    </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>